--- a/config.h.in
+++ b/config.h.in
@@ -288,7 +288,7 @@
 #cmakedefine WANT_ASSERT
 
 /* Define if you cpu_set_t in sched.h */
-#cmakedefine HAVE_CPU_SET_T
+#cmakedefine01 HAVE_CPU_SET_T
 
 /* Define if your processor stores words with the most significant byte first
    (like Motorola and SPARC, unlike Intel and VAX). */
