set gmp variables to mpir variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
 endif()
 
 option(BUILD_SHARED_LIBS "Build shared libs" on)
+option(WITH_MPIR "Build with MPIR or not" off)
 option(WITH_NTL "Build with NTL or not" off)
 
 file(READ "${CMAKE_CURRENT_SOURCE_DIR}/configure" CONFIGURE_CONTENTS)
@@ -33,6 +34,8 @@ set(FLINT_PATCH ${CMAKE_MATCH_1})
 
 if(WITH_MPIR)
   find_package(MPIR 3.0.0 REQUIRED)
+  set(GMP_LIBRARIES ${MPIR_LIBRARIES})
+  set(GMP_INCLUDE_DIRS ${MPIR_INCLUDE_DIRS})
 else()
   find_package(GMP 6.0.0 REQUIRED)
 endif()
