--- a/appveyor.yml
+++ b/appveyor.yml
@@ -62,7 +62,10 @@ build_script:
   - cmake --build . -- -j2
 
 test_script:
-  - ctest -j3 --output-on-failure
+  - set "SKIP_TESTS=dummy_appveyor$"
+  # Following is known to hang
+  - if [%COMPILER%]==[cl] if [%ARCH%]==[64] set "SKIP_TESTS=%SKIP_TESTS%|fmpz_poly_factor-test-t-factor$"
+  - ctest -j3 "%SKIP_TESTS%" --output-on-failure
 
 #on_finish:
 #  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
