--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,7 +56,7 @@ build_script:
   - cmake --build . -- -j2
 
 test_script:
-  - ctest -j3 --timeout 600
+  - ctest -j3 --verbose --timeout 600
 
 #on_finish:
 #  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
