--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,8 +59,8 @@ endif()
 # Find sources
 
 set(BUILD_DIRS
-    aprcl ulong_extras long_extras perm fmpz fmpz_vec fmpz_poly 
-    fmpq_poly fmpz_mat fmpz_lll mpfr_vec mpfr_mat mpf_vec mpf_mat nmod_vec nmod_sparse_vec nmod_poly 
+    aprcl ulong_extras long_extras perm fmpz fmpz_vec fmpz_sparse_vec fmpz_poly 
+    fmpq_poly fmpz_mat fmpz_sparse_mat fmpz_lll mpfr_vec mpfr_mat mpf_vec mpf_mat nmod_vec nmod_sparse_vec nmod_poly 
     nmod_poly_factor arith mpn_extras nmod_mat nmod_sparse_mat fmpq fmpq_vec fmpq_mat padic 
     fmpz_poly_q fmpz_poly_mat nmod_poly_mat fmpz_mod_poly 
     fmpz_mod_poly_factor fmpz_factor fmpz_poly_factor fft qsieve 
@@ -96,7 +96,7 @@ endif()
 
 set(HEADERS
     NTL-interface.h flint.h longlong.h flint-config.h gmpcompat.h fft_tuning.h
-    fmpz-conversions.h profiler.h templates.h exception.h hashmap.h
+    fmpz-conversions.h profiler.h templates.h exception.h heap.h hashmap.h
 )
 
 foreach (build_dir IN LISTS BUILD_DIRS TEMPLATE_DIRS)
