build: rename HAVE_PTHREAD to FLINT_USES_PTHREAD
A library such as flint should always try to namespace its own
defines somehow, lest flint's defines could interfere or override a
macro of the same name in a project that happens to use HAVE_* macros
of its own.

HAVE_PTHREAD's value influences the ABI of e.g. fmpz_block_header_s,
so the macro does not just describe a system property at the time of
building, but also the state of a built-and-installed libflint, so to
that end, I renamed HAVE_PTHREAD to FLINT_USES_PTHREAD.

--- a/config.h.in
+++ b/config.h.in
@@ -294,7 +294,7 @@
    (like Motorola and SPARC, unlike Intel and VAX). */
 #cmakedefine WORDS_BIGENDIAN
 
-#cmakedefine HAVE_PTHREAD 1
+#cmakedefine FLINT_USES_PTHREAD 1
 
 /* Define as `__inline' if that's what the C compiler calls it, or to nothing
    if it is not supported. */
