--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - export LOCAL=$(pwd)/local
   - export LDFLAGS="-Wl,-rpath,$LOCAL/lib"
   - ./.build_dependencies
-  - ./configure --with-mpir=${LOCAL} --with-mpfr=${LOCAL} --prefix=${LOCAL}
+  - ./configure CFLAGS="-Wredundant-decls" --with-mpir=${LOCAL} --with-mpfr=${LOCAL} --prefix=${LOCAL}
   - ${MAKE}
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then otool -L libflint.dylib; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
