--- a/config.h.in
+++ b/config.h.in
@@ -1,16 +1,22 @@
 /* Define if the compiler supports and should use thread-local storage */
-#cmakedefine FLINT_USES_TLS 1
+#cmakedefine01 FLINT_USES_TLS
 
 /* Define if the library should be thread-safe, no matter whether FLINT_USES_TLS is used */
-#cmakedefine FLINT_REENTRANT 1
+#cmakedefine01 FLINT_REENTRANT
 
-/* ./configure --enable-assert option, to enable some ASSERT()s */
-#cmakedefine FLINT_WANT_ASSERT
+/* Define if -DCMAKE_BUILD_TYPE=Debug was given, to enable some ASSERT()s */
+#cmakedefine01 FLINT_WANT_ASSERT
 
 /* Define if you cpu_set_t in sched.h */
 #cmakedefine01 FLINT_USES_CPUSET
 
 #cmakedefine01 FLINT_USES_PTHREAD
+
+#cmakedefine01 FLINT_USES_POPCNT
+
+#cmakedefine01 FLINT_USES_BLAS
+
+#cmakedefine01 FLINT_USES_FENV
 
 #ifdef _MSC_VER
 #define access _access
