--- a/config.h.in
+++ b/config.h.in
@@ -12,7 +12,7 @@
 
 #cmakedefine01 FLINT_USES_PTHREAD
 
-#cmakedefine01 FLINT_USES_POPCNT
+#cmakedefine FLINT_USES_POPCNT
 
 #cmakedefine01 FLINT_USES_BLAS
 
