--- a/.github/workflows/test_flint.yml
+++ b/.github/workflows/test_flint.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: sudo apt-get install texinfo
+      - run: cd $GITHUB_WORKSPACE
       - run: .build_dependencies
       - run: ./configure CFLAGS="-Wredundant-decls" --with-mpir=${LOCAL} --with-mpfr=${LOCAL} --prefix=${LOCAL}
       - run: $MAKE
@@ -25,6 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: sudo apt-get install texinfo
       - run: sudo apt-get install cmake
+      - run: cd $GITHUB_WORKSPACE
       - run: .build_dependencies
       - run: mkdir build
       - run: cd build
