--- a/.github/workflows/test_flint.yml
+++ b/.github/workflows/test_flint.yml
@@ -4,7 +4,7 @@ jobs:
   ubuntu-gcc:
     runs-on: ubuntu-latest
     env:
-      LOCAL: $(GITHUB_WORKSPACE)/local
+      LOCAL: "$GITHUB_WORKSPACE/local"
       LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
       MAKE: "make -j"
     steps:
@@ -18,7 +18,7 @@ jobs:
   ubuntu-cmake-gcc:
     runs-on: ubuntu-latest
     env:
-      LOCAL: $(GITHUB_WORKSPACE)/local
+      LOCAL: "$GITHUB_WORKSPACE/local"
       LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
       MAKE: "make -j"
     steps:
