--- a/.github/workflows/test_flint.yml
+++ b/.github/workflows/test_flint.yml
@@ -9,12 +9,17 @@ jobs:
       MAKE: "make -j"
     steps:
       - uses: actions/checkout@v2
-      - run: sudo apt-get install texinfo
-      - run: ./.build_dependencies
-      - run: ./configure CFLAGS="-Wredundant-decls" --with-mpir=${LOCAL} --with-mpfr=${LOCAL} --prefix=${LOCAL}
-      - run: $MAKE
-      - run: ldd libflint.so
-      - run: $MAKE check
+        run:
+          sudo apt-get install texinfo
+          ./.build_dependencies
+          ./configure CFLAGS="-Wredundant-decls" --with-mpir=${LOCAL} --with-mpfr=${LOCAL} --prefix=${LOCAL}
+          $MAKE
+          ldd libflint.so
+          $MAKE check
+        env:
+          LOCAL: ${GITHUB_WORKSPACE}/local
+          LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
+          MAKE: "make -j"
   ubuntu-cmake-gcc:
     runs-on: ubuntu-latest
     env:
