--- a/.github/workflows/test_flint.yml
+++ b/.github/workflows/test_flint.yml
@@ -3,19 +3,18 @@ on: [push, pull_request]
 jobs:
   ubuntu-gcc:
     runs-on: ubuntu-latest
-    env:
-      LOCAL: ${{ GITHUB_WORKSPACE }}/local
-      LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
-      MAKE: "make -j"
     steps:
       - uses: actions/checkout@v2
-      - run:
-          sudo apt-get install texinfo;
-          ./.build_dependencies;
-          ./configure CFLAGS="-Wredundant-decls" --with-mpir=${LOCAL} --with-mpfr=${LOCAL} --prefix=${LOCAL};
-          $MAKE;
-          ldd libflint.so;
-          $MAKE check;
+      - run: |
+          echo "LOCAL=$GITHUB_WORKSPACE/local" >> $GITHUB_ENV
+          echo "LDFLAGS=-Wl,-rpath,$LOCAL/lib" >> $GITHUB_ENV
+          echo "MAKE=make-j" >> $GITHUB_ENV
+          sudo apt-get install texinfo
+          ./.build_dependencies
+          ./configure CFLAGS="-Wredundant-decls" --with-mpir=${LOCAL} --with-mpfr=${LOCAL} --prefix=${LOCAL}
+          $MAKE
+          ldd libflint.so
+          $MAKE check
   ubuntu-cmake-gcc:
     runs-on: ubuntu-latest
     env:
