--- a/.github/workflows/test_flint.yml
+++ b/.github/workflows/test_flint.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          echo "LOCAL=$GITHUB_WORKSPACE/local" >> $GITHUB_ENV
+          echo "LOCAL=${GITHUB_WORKSPACE}/local" >> $GITHUB_ENV
           echo "LDFLAGS=-Wl,-rpath,$LOCAL/lib" >> $GITHUB_ENV
           echo "MAKE=make-j" >> $GITHUB_ENV
           sudo apt-get install texinfo
@@ -15,6 +15,10 @@ jobs:
           $MAKE
           ldd libflint.so
           $MAKE check
+       env:
+          LOCAL: ${{ github.workspace }}/local
+          LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
+          MAKE: "make -j"
   ubuntu-cmake-gcc:
     runs-on: ubuntu-latest
     env:
