--- a/.github/workflows/test_flint.yml
+++ b/.github/workflows/test_flint.yml
@@ -24,13 +24,16 @@ jobs:
       MAKE: "make -j"
     steps:
       - uses: actions/checkout@v2
-      - run: sudo apt-get install texinfo
-      - run: sudo apt-get install cmake
-      - run: ./.build_dependencies
-      - run: mkdir build
-      - run: cd build
-      - run: cmake -G"Unix Makefiles" -DWITH_NTL=yes -DBUILD_TESTING=yes -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$LOCAL ..
-      - run: $MAKE
-      - run: ldd lib/libflint.so
-      - run: cd ..
-    
+      - run: |
+          sudo apt-get install texinfo
+          sudo apt-get install cmake
+          ./.build_dependencies
+          mkdir build
+          cd build
+          cmake -G"Unix Makefiles" -DWITH_NTL=yes -DBUILD_TESTING=yes -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$LOCAL ..
+          $MAKE
+          ldd lib/libflint.so
+        env:
+          LOCAL: ${{ github.workspace }}/local
+          LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
+          MAKE: "make -j" 
