--- a/Makefile.in
+++ b/Makefile.in
@@ -10,7 +10,7 @@ BUILD_DIRS = aprcl ulong_extras long_extras perm fmpz fmpz_vec fmpz_poly \
    fmpq_poly fmpz_mat fmpz_lll mpfr_vec mpfr_mat mpf_vec mpf_mat nmod_vec nmod_poly \
    nmod_poly_factor arith mpn_extras nmod_mat fmpq fmpq_vec fmpq_mat padic \
    fmpz_poly_q fmpz_poly_mat nmod_poly_mat fmpz_mod_poly \
-   fmpz_mod_poly_factor fmpz_factor fmpz_poly_factor fft qsieve \
+   fmpz_mod_poly_factor fmpz_factor fmpz_poly_factor fmpz_poly_roots fft qsieve \
    double_extras d_vec d_mat padic_poly padic_mat qadic  \
    fq fq_vec fq_mat fq_poly fq_poly_factor fq_embed \
    fq_nmod fq_nmod_vec fq_nmod_mat fq_nmod_poly fq_nmod_poly_factor fq_nmod_embed \
