--- a/Makefile.in
+++ b/Makefile.in
@@ -154,7 +154,7 @@ tests: library test_helpers.o $(TESTS)
 	$(AT)$(foreach ext, $(EXTENSIONS), $(foreach dir, $(patsubst $(ext)/%.h, %, $(wildcard $(ext)/*.h)), mkdir -p build/$(dir)/test; BUILD_DIR=$(CURDIR)/build/$(dir); export BUILD_DIR; MOD_DIR=$(dir); export MOD_DIR; $(MAKE) -f $(CURDIR)/Makefile.subdirs -C $(ext)/$(dir) tests || exit $$?;))
 	mkdir -p build/interfaces/test
 	$(AT)if [ "$(WANT_NTL)" -eq "1" ]; then \
-		$(MAKE) build/interfaces/test/t-NTL-interface; \
+		$(MAKE) build/interfaces/test/t-NTL-interface$(EXEEXT); \
 	fi
 
 define test_mod
@@ -184,7 +184,7 @@ ifndef MOD
 	mkdir -p build/interfaces/test
 	$(AT)if [ "$(WANT_NTL)" -eq "1" ]; then \
 		$(MAKE) build/interfaces/test/t-NTL-interface; \
-		build/interfaces/test/t-NTL-interface; \
+		build/interfaces/test/t-NTL-interface$(EXEEXT); \
 	fi
 else
 	$(AT)$(foreach mod, $(MOD), $(call test_mod,$(mod)) || exit $$?;)
